Fixing Scroll bar Hide on Mobile
Modified-by: Cristian D. Moreno - Kyonax <iam@kyo.wtf>

--- a/src/app/scss/base/_global.scss
+++ b/src/app/scss/base/_global.scss
@@ -66,6 +66,20 @@ body::-webkit-scrollbar {
   width: 8px;
 }
 
+// Hide scrollbar on mobile (up to 768px width)
+@media (max-width: 882px) {
+  * {
+    // For Firefox
+    scrollbar-width: none;
+
+    // For WebKit-based browsers (Chrome, Safari, Edge)
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
+
+
 /**
  * Body Styles
  *
